--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:orientation="vertical" android:layout_width="match_parent"
-android:layout_height="match_parent">
-
-
-<android.support.v7.widget.RecyclerView
-    android:id="@+id/main_activity_recycler_view"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
+    <mehdi.sakout.fancybuttons.FancyButton
+        android:id="@+id/btn_sound"
+        android:layout_width="200dp"
+        android:layout_height="64dp"
+        android:layout_marginRight="10dp"
+        android:padding="10dp"
+        fancy:fb_defaultColor="#ff8800"
+        fancy:fb_focusColor="#313131"
 
-</android.support.v7.widget.RecyclerView>
+        fancy:fb_iconPaddingLeft="0dp"
+        fancy:fb_iconPaddingRight="0dp"
+        fancy:fb_iconResource="@drawable/soundcloud"
+        fancy:fb_radius="64dp">
+    </mehdi.sakout.fancybuttons.FancyButton>
 
 
 </LinearLayout>
