--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
         <item name="colorPrimary">@color/charcoalPrimary</item>
         <item name="colorPrimaryDark">@color/charcoalPrimaryDark</item>
         <item name="colorAccent">@color/gold</item>
+        <!--<item name="android:textColor">@color/pink</item>-->
         <item name="android:textColor">@android:color/white</item>
         <!--<item name="preferenceTheme">@style/PreferenceThemeOverlay</item>-->
     </style>
